--- a/quickstarts/quickstart-backmac-for-atlassian-services.yaml
+++ b/quickstarts/quickstart-backmac-for-atlassian-services.yaml
@@ -126,7 +126,6 @@ Parameters:
       - i3.4xlarge
       - i3.8xlarge
       - i3.large
-      - i3.metal
       - i3.xlarge
       - m5.12xlarge
       - m5.24xlarge
@@ -1590,7 +1589,7 @@ Resources:
               - "/bin/mkdir -p /backup\n"
               - "yum -y update aws-cfn-bootstrap\n"
               - "yum -y install nfs-utils amazon-efs-utils nvme-cli\n"
-              - "yum -y install https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/x86_64/os/Packages/r/rsync-3.1.3-6.fc30.x86_64.rpm\n"
+              - "yum -y install https://s3.amazonaws.com/wpe-public-software/rsync-3.1.3-6.fc30.x86_64.rpm\n"
               - !Sub ["/usr/bin/aws s3 cp s3://${S3LambdaBucketPrefix}-${Region}/${S3LambdaBucketFolder}/parallel_sync /usr/local/bin/parallel_sync\n", {Region: !Ref "AWS::Region", AccountId: !Ref "AWS::AccountId"}]
               - "chmod u+x /usr/local/bin/parallel_sync\n"
               - !Sub ["/opt/aws/bin/cfn-init -v --stack ${StackName}", {StackName: !Ref "AWS::StackName"}]
