--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -893,8 +893,16 @@ Resources:
             Version: 2012-10-17
             Statement:
               - Action:
+                - 'ec2:AttachVolume'
+                - 'ec2:CreateSnapshot'
+                - 'ec2:CreateTags'
+                - 'ec2:CreateVolume'
+                - 'ec2:DeleteSnapshot'
+                - 'ec2:DeleteTags'
+                - 'ec2:DeleteVolume'
                 - 'ec2:DescribeInstances'
                 - 'ec2:DescribeSecurityGroups'
+                - 'ec2:DescribeVolumes'
                 Effect: Allow
                 Resource: ['*']
               - Action: ['s3:ListBucket']
