DCD-198: First pass for the cleanup after-scripts
- Now deletes the created S3 temp bucket
- Now deletes created CF stack just after it was validated

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -317,6 +317,10 @@ pipelines:
                 - echo $ELB_NAME
                 - aws elb wait any-instance-in-service --load-balancer-name $ELB_NAME
                 - curl --fail ${SERVICE_URL}/status
+              after-script:
+                - S3_BUCKET_NAME=$(ls quickstarts/quickstart-atlassian-confluence/taskcat_outputs/| grep tag | sed 's/^tCaT-tag\(.*\)-${CI_DEFAULT_REGION}-.*$/taskcat-tag-quickstart-atlassian\1/g')
+                - aws s3 rb s3://${S3_BUCKET_NAME} --force
+                - aws cloudformation delete-stack --stack-name ${STACK_NAME} --region ${CI_DEFAULT_REGION}
               artifacts:
                 - quickstarts/quickstart-atlassian-jira/taskcat_outputs/*
           - step:
@@ -350,6 +354,10 @@ pipelines:
                 - echo $TGARN
                 - aws elbv2 wait target-in-service --target-group-arn $TGARN
                 - curl --fail ${SERVICE_URL}/status
+              after-script:
+                - S3_BUCKET_NAME=$(ls quickstarts/quickstart-atlassian-confluence/taskcat_outputs/| grep tag | sed 's/^tCaT-tag\(.*\)-${CI_DEFAULT_REGION}-.*$/taskcat-tag-quickstart-atlassian\1/g')
+                - aws s3 rb s3://${S3_BUCKET_NAME} --force
+                - aws cloudformation delete-stack --stack-name ${STACK_NAME} --region ${CI_DEFAULT_REGION}
               artifacts:
                 - quickstarts/quickstart-atlassian-confluence/taskcat_outputs/*
           - step:
@@ -384,5 +392,9 @@ pipelines:
                 - echo "${SERVICE_URL}"
                 - sleep 10
                 - curl --fail ${SERVICE_URL}/status
+              after-script:
+                - S3_BUCKET_NAME=$(ls quickstarts/quickstart-atlassian-confluence/taskcat_outputs/| grep tag | sed 's/^tCaT-tag\(.*\)-${CI_DEFAULT_REGION}-.*$/taskcat-tag-quickstart-atlassian\1/g')
+                - aws s3 rb s3://${S3_BUCKET_NAME} --force
+                - aws cloudformation delete-stack --stack-name ${STACK_NAME} --region ${CI_DEFAULT_REGION}
               artifacts:
                 - quickstarts/quickstart-atlassian-bitbucket/taskcat_outputs/*
