--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -296,26 +296,9 @@ pipelines:
           - step:
               name: Taskcat run Jira
               image: python:3.6-alpine
-              script:
-                - export QS_PROJECT_NAME=quickstart-atlassian-jira
-                - apk update
-                - apk --no-cache add jq openssh git groff curl
-                - pip --no-cache-dir install awscli taskcat
-                - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
-                - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
-                - aws configure set default.region ${CI_DEFAULT_REGION}
-                - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
-                - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
-                - mkdir -p ~/.ssh
-                - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
-                - (umask  077 ; echo ${CI_TASKCAT_USER_GITHUB_PRIVATE_KEY} | base64 -d > ~/.ssh/id_rsa)
-                - eval "$(ssh-agent)"
-                - ssh-add ~/.ssh/id_rsa
-                - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap --no-recurse
-                - cd quickstarts
-                - cp -r ./ci/jira/* ./${QS_PROJECT_NAME}/ci/
-                - cd ${QS_PROJECT_NAME}
-                - echo "[{\"ParameterKey\":\"KeyPairName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
+              - script:
+                - export PRODUCT=jira
+                - chmod a+x ./scripts/pipelines-prerequisites.sh && ./scripts/pipelines-prerequisites.sh
                 - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-jira-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
                 - export STACK_NAME=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-jira-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0] | .StackName' | tr -d '"')
                 - export SERVICE_URL=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | jq -c '.Stacks | .[].Outputs | .[] | select(.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
@@ -331,25 +314,8 @@ pipelines:
               name: Taskcat run Confluence
               image: python:3.6-alpine
               script:
-                - export QS_PROJECT_NAME=quickstart-atlassian-confluence
-                - apk update
-                - apk --no-cache add jq openssh git groff curl
-                - pip --no-cache-dir install awscli taskcat
-                - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
-                - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
-                - aws configure set default.region ${CI_DEFAULT_REGION}
-                - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
-                - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
-                - mkdir -p ~/.ssh
-                - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
-                - (umask  077 ; echo ${CI_TASKCAT_USER_GITHUB_PRIVATE_KEY} | base64 -d > ~/.ssh/id_rsa)
-                - eval "$(ssh-agent)"
-                - ssh-add ~/.ssh/id_rsa
-                - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap --no-recurse
-                - cd quickstarts
-                - cp -r ./ci/confluence/* ./${QS_PROJECT_NAME}/ci/
-                - cd ${QS_PROJECT_NAME}
-                - echo "[{\"ParameterKey\":\"KeyPairName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
+                - export PRODUCT=confluence
+                - chmod a+x ./scripts/pipelines-prerequisites.sh && ./scripts/pipelines-prerequisites.sh
                 - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-confluence-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
                 - export STACK_NAME=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-confluence-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0] | .StackName' | tr -d '"')
                 - export SERVICE_URL=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | jq -c '.Stacks | .[].Outputs | .[] | select(.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
@@ -365,25 +331,8 @@ pipelines:
               name: Taskcat run Bitbucket
               image: python:3.6-alpine
               script:
-                - export QS_PROJECT_NAME=quickstart-atlassian-bitbucket
-                - apk update
-                - apk --no-cache add jq openssh git groff curl
-                - pip --no-cache-dir install awscli taskcat
-                - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
-                - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
-                - aws configure set default.region ${CI_DEFAULT_REGION}
-                - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
-                - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
-                - mkdir -p ~/.ssh
-                - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
-                - (umask  077 ; echo ${CI_TASKCAT_USER_GITHUB_PRIVATE_KEY} | base64 -d > ~/.ssh/id_rsa)
-                - eval "$(ssh-agent)"
-                - ssh-add ~/.ssh/id_rsa
-                - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap --no-recurse
-                - cd quickstarts
-                - cp -r ./ci/bitbucket/* ./${QS_PROJECT_NAME}/ci/
-                - cd ${QS_PROJECT_NAME}
-                - echo "[{\"ParameterKey\":\"KeyPairName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
+                - export PRODUCT=bitbucket
+                - chmod a+x ./scripts/pipelines-prerequisites.sh && ./scripts/pipelines-prerequisites.sh
                 - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-bitbucket-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
                 - export STACK_NAME=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-bitbucket-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0] | .StackName' | tr -d '"')
                 - export SERVICE_URL=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | jq -c '.Stacks | .[].Outputs | .[] | select(.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
