--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -296,7 +296,7 @@ pipelines:
           - step:
               name: Taskcat run Jira
               image: python:3.6-alpine
-              - script:
+              script:
                 - export PRODUCT=jira
                 - chmod a+x ./scripts/pipelines-prerequisites.sh && ./scripts/pipelines-prerequisites.sh
                 - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-jira-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
