--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -298,14 +298,15 @@ pipelines:
               image: python:3.6-alpine
               script:
                 - export PRODUCT=jira
-                - chmod a+x ./scripts/pipelines-prerequisites.sh && ./scripts/pipelines-prerequisites.sh
-                - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-jira-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
+                - scripts/pipelines-prerequisites.sh
+                - taskcat -n -c quickstart-atlassian-${PRODUCT}/ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-jira-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
                 - export STACK_NAME=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-jira-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0] | .StackName' | tr -d '"')
-                - export SERVICE_URL=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | jq -c '.Stacks | .[].Outputs | .[] | select(.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
-                - echo "${SERVICE_URL}"
+                - export SERVICE_URL=$(aws cloudformation describe-stacks --stack-name "${STACK_NAME}" | jq -c '.Stacks | .[].Outputs | .[] | select(.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
+                - echo ${SERVICE_URL}
                 - export ELB_NAME=$(aws cloudformation describe-stack-resources --stack-name "${STACK_NAME}" | jq -c '.StackResources | .[] | select(.LogicalResourceId=="LoadBalancer") | .PhysicalResourceId' | tr -d '"')
-                - echo $ELB_NAME
+                - echo ${ELB_NAME}
                 - aws elb wait any-instance-in-service --load-balancer-name $ELB_NAME
+                - sleep 10
                 - curl --fail ${SERVICE_URL}/status
               after-script: *quickstart-cleanup
               artifacts:
@@ -315,11 +316,11 @@ pipelines:
               image: python:3.6-alpine
               script:
                 - export PRODUCT=confluence
-                - chmod a+x ./scripts/pipelines-prerequisites.sh && ./scripts/pipelines-prerequisites.sh
-                - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-confluence-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
+                - scripts/pipelines-prerequisites.sh
+                - taskcat -n -c quickstart-atlassian-${PRODUCT}/ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-confluence-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
                 - export STACK_NAME=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-confluence-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0] | .StackName' | tr -d '"')
                 - export SERVICE_URL=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | jq -c '.Stacks | .[].Outputs | .[] | select(.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
-                - echo "${SERVICE_URL}"
+                - echo ${SERVICE_URL}
                 - export TGARN=$(aws cloudformation describe-stacks --stack-name "${STACK_NAME}" | jq '.Stacks[0].Outputs'|jq '.[] | select(.OutputKey=="ConfluenceTargetGroupARN")|.OutputValue'|tr -d '"')
                 - echo $TGARN
                 - aws elbv2 wait target-in-service --target-group-arn $TGARN
@@ -332,14 +333,14 @@ pipelines:
               image: python:3.6-alpine
               script:
                 - export PRODUCT=bitbucket
-                - chmod a+x ./scripts/pipelines-prerequisites.sh && ./scripts/pipelines-prerequisites.sh
-                - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-bitbucket-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
+                - scripts/pipelines-prerequisites.sh
+                - taskcat -n -c quickstart-atlassian-${PRODUCT}/ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-bitbucket-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=false
                 - export STACK_NAME=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-bitbucket-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0] | .StackName' | tr -d '"')
                 - export SERVICE_URL=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" | jq -c '.Stacks | .[].Outputs | .[] | select(.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
                 - export ELB_NAME=$(aws cloudformation describe-stack-resources --stack-name "${STACK_NAME}" | jq -c '.StackResources | .[] | select(.LogicalResourceId=="LoadBalancer") | .PhysicalResourceId' | tr -d '"')
-                - echo $ELB_NAME
+                - echo ${ELB_NAME}
                 - aws elb wait any-instance-in-service --load-balancer-name $ELB_NAME
-                - echo "${SERVICE_URL}"
+                - echo ${SERVICE_URL}
                 - sleep 10
                 - curl --fail ${SERVICE_URL}/status
               after-script: *quickstart-cleanup
