DCD-198: Temp - verbose command logging to debug Pipelines

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,8 +3,10 @@ image: bashell/alpine-bash
 definitions:
   scripts:
     - script: &quickstart-cleanup
-        - ls -R .
-        - S3_BUCKET_NAME=$(ls taskcat_outputs/| grep tag | sed 's/^tCaT-tag\(.*\)-${CI_DEFAULT_REGION}-.*$/taskcat-tag-quickstart-atlassian\1/g')
+        - ls taskcat_outputs/
+        - ls taskcat_outputs/| grep tag
+        - S3_BUCKET_NAME=$(ls taskcat_outputs/| grep tag | sed 's/^tCaT-tag-\(.*\)-${CI_DEFAULT_REGION}-.*$/taskcat-tag-quickstart-atlassian-\1/g')
+        - echo ${S3_BUCKET_NAME}
         - aws s3 rb s3://${S3_BUCKET_NAME} --force
         - aws cloudformation delete-stack --stack-name ${STACK_NAME} --region ${CI_DEFAULT_REGION}
 
