--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -139,9 +139,9 @@ pipelines:
                 - export AWS_SECRET_KEY=${CI_SECRET_ACCESS_KEY}
                 - export AWS_ACCESS_KEY=${CI_ACCESS_KEY_ID}
                 - chmod 744 ./scripts/cisetup.sh && ./scripts/cisetup.sh
-                - aws cloudformation list-stacks  | grep -iE "Stack(Name|Status)" | cat
+                - aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE" "UPDATE_COMPLETE" | grep -iE "Stack(Name|Status)" | cat
                 - cd ami
-                - if aws cloudformation list-stacks --stack-status-filter="CREATE_COMPLETE" | grep StackName|grep \"ATLJIRA\"; then touch jiraExists; fi
+                - if aws cloudformation list-stacks --stack-status-filter "CREATE_COMPLETE" "UPDATE_COMPLETE" | grep StackName|grep \"ATLJIRA\"; then touch jiraExists; fi
                 - cat ../ci-parameters-jira.json
                 - ls -al ../quickstarts/quickstart-atlassian-jira/templates/**
                 - aws s3 cp ../quickstarts/quickstart-atlassian-jira/templates/quickstart-jira-dc.template.yaml s3://${CI_S3_OUTPUT_BUCKET}/${BITBUCKET_BUILD_NUMBER}/quickstarts/quickstart-jira-dc.template.yaml
