--- a/templates/ConfluenceServer.template.yaml
+++ b/templates/ConfluenceServer.template.yaml
@@ -910,6 +910,8 @@ Resources:
                 - 'ec2:DeleteVolume'
                 - 'ec2:DescribeInstances'
                 - 'ec2:DescribeSecurityGroups'
+                - 'ec2:DescribeSnapshotAttribute'
+                - 'ec2:DescribeSnapshots'
                 - 'ec2:DescribeVolumes'
                 Effect: Allow
                 Resource: ['*']
