--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -1120,8 +1120,11 @@ Resources:
                 echo "Creating mount point"
                 mkdir -p $mountPoint
 
+                echo "Adding to fstab"
+                echo "UUID=$(blkid -o value -s UUID $deviceName)  $mountPoint  ext4  defaults,nofail  0  2" >> /etc/fstab
+
                 echo "Mounting EBS"
-                mount $deviceName $mountPoint
+                mount -a
 
                 if [[ -n $existingEbsSnapshotId ]]; then
                   echo "Deleting old EBS snapshot and volume"
